<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


     <!-- コンテンツ -->
    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="6dp"
        android:background="#ffffff"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingBottom="30dp">


        <!-- メッセージ -->
        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/string"
            android:textColor="#000000"
            android:textSize="35sp" />

    </LinearLayout>


    <!-- OK button -->
    <Button
        android:id="@+id/positive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/liner"
        android:layout_alignRight="@+id/liner"
        android:layout_alignBottom="@+id/liner"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:background="#00808080"
        android:text="@string/fire"
        android:textColor="#000000" />


    <!-- NO button -->
    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/liner"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/positive_button"
        android:layout_toLeftOf="@+id/positive_button"
        android:background="#00808080"
        android:text="@string/cancel"
        android:textColor="#000000" />

    <!-- Close ボタン -->

</RelativeLayout>